--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 @import url('/css/sections/_brands.css');
 @import url('/css/sections/_app-features.css');
 @import url('/css/sections/_carousel.css');
+@import url('/css/sections/_app-features-followup.css');
 @import url('/css/sections/_faq.css');
 @import url('/css/sections/_subscribe.css');
 
