--- a/css/other/_dark-mode.css
+++ b/css/other/_dark-mode.css
@@ -92,4 +92,27 @@
             background-color: rgba(243, 246, 255, 0.05);
         }
     }
+
+    /* FAQ Section */
+    #faq-section {
+        /* .faq-accordion-box .faq-accordion::before {
+            background-color: var(--color-gray-900);
+        } */
+
+        .a1, .a2, .a3, .a4, .a5, .a6 {
+            color: var(--color-white);
+        }
+
+        .faq-accordion {
+            background-color: var(--color-almostblack-blue);
+        }
+        .faq-accordion + .faq-panel {
+            background-color: var(--color-almostblack-blue);
+        }
+        .faq-accordion .icon-down {
+            /* background-color: var(--color-gray-900); */
+            background-color: hsla(223, 26%, 14%, 0.911);;
+            color: var(--color-white);
+        }
+    }
 }
