--- a/css/other/_variables.css
+++ b/css/other/_variables.css
@@ -9,7 +9,7 @@
     --color-gray-600: #9397AD; /* Muted Text */
     --color-gray-700: #565973; /* Body Text */
     --color-gray-800: #33354D; /* Navigation */
-    --color-gray-900: #0B0F19; /* Header, Dark */
+    --color-gray-900: #0b0f19; /* Header, Dark */
 
     /* Brand */
     --color-primary: #6366F1; /* Brand, Primary */
