--- a/css/sections/_navbar.css
+++ b/css/sections/_navbar.css
@@ -94,9 +94,10 @@
     display: none;
     
     @media (min-width: 1400px) {
-        display: block;
+        display: flex;
         align-content: center;
         margin-top: .1rem;
+        gap: 2rem;
     }  
 }
 
