--- a/css/sections/_subscribe.css
+++ b/css/sections/_subscribe.css
@@ -36,9 +36,32 @@
     
     .sub-info-box {
         display: flex;
-        gap: 1rem;
         font-weight: 800;
-        font-size: 21.6px;
+        gap: 1rem;
+
+        @media (min-width: 768px) {
+
+            #img-text-md {
+                padding-right: 2rem;
+            }
+            
+            @media (min-width: 1400px) {
+                gap: 2rem;
+            }
+        }
+        
+        
+        h2 {
+            font-size: 21.6px;
+
+            @media (min-width: 768px) {
+                font-size: 22.7px;
+                
+                @media (min-width: 1400px) {
+                    font-size: 24px;
+                }
+            }
+        }
         
         #img-text-md {
             padding-right: 1rem;
@@ -48,18 +71,7 @@
             padding-left: 1rem;
         }
 
-        @media (min-width: 768px) {
-            font-size: 22.7px;
-
-            #img-text-md {
-                padding-right: 2rem;
-            }
-            
-            @media (min-width: 1400px) {
-                font-size: 24px;
-                gap: 2rem;
-            }
-        }
+        
       
         span {
             display: none;
