created the testimonil section, and the css for it, changed the background color in some sections and added them to the dark-mode.

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 @import url('/css/sections/_app-features.css');
 @import url('/css/sections/_carousel.css');
 @import url('/css/sections/_app-features-followup.css');
+@import url('/css/sections/_testimonials.css');
 @import url('/css/sections/_faq.css');
 @import url('/css/sections/_subscribe.css');
 
