--- a/css/sections/_faq.css
+++ b/css/sections/_faq.css
@@ -4,9 +4,9 @@
     padding-bottom: 0;
     
     @media (min-width: 1400px) {
-        padding-bottom: 7rem;
+        padding-top: 6rem;
+        padding-bottom: 6rem;
     }
-
 
     .faq-container {
         display: grid;
