Added ascii art in the top of every section file, so that it will spill over in the main.css file, and deleted every comment in the themes.css file, since there was errors everywhere regarding that.

--- a/css/main.css
+++ b/css/main.css
@@ -335,6 +335,11 @@ body {
 .dark-mode .sticky-header.scrolled {
   background: var(--color-gray-900);
 }
+.dark-mode header {
+  /* Features Text*/
+  /* Dark mode Text */
+  /* Burger Menu Icon */
+}
 .dark-mode header .nav-link {
   color: var(--color-gray-500);
 }
@@ -346,6 +351,12 @@ body {
 }
 .dark-mode header .btn-mobile {
   color: var(--color-white);
+}
+.dark-mode #showcase-section {
+  /* Showcase Text */
+  /* Marketplace Buttons */
+  /* Discover more Button */
+  /* Discover more Text */
 }
 .dark-mode #showcase-section #sc-text {
   /* color: var(--color-white); */
@@ -419,6 +430,13 @@ body {
   background-color: var(--color-gray-100-dark);
 }
 
+/* 
+███╗   ██╗ █████╗ ██╗   ██╗██████╗  █████╗ ██████╗ 
+████╗  ██║██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔══██╗
+██╔██╗ ██║███████║██║   ██║██████╔╝███████║██████╔╝
+██║╚██╗██║██╔══██║╚██╗ ██╔╝██╔══██╗██╔══██║██╔══██╗
+██║ ╚████║██║  ██║ ╚████╔╝ ██████╔╝██║  ██║██║  ██║
+╚═╝  ╚═══╝╚═╝  ╚═╝  ╚═══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝ */
 /* Partly taken from School Guidance Material & ChatGPT */
 #navbar-section .container {
   display: grid;
@@ -635,6 +653,13 @@ body {
   background-color: var(--color-primary);
 }
 
+/* 
+███████╗██╗  ██╗ ██████╗ ██╗    ██╗ ██████╗ █████╗ ███████╗███████╗
+██╔════╝██║  ██║██╔═══██╗██║    ██║██╔════╝██╔══██╗██╔════╝██╔════╝
+███████╗███████║██║   ██║██║ █╗ ██║██║     ███████║███████╗█████╗  
+╚════██║██╔══██║██║   ██║██║███╗██║██║     ██╔══██║╚════██║██╔══╝  
+███████║██║  ██║╚██████╔╝╚███╔███╔╝╚██████╗██║  ██║███████║███████╗
+╚══════╝╚═╝  ╚═╝ ╚═════╝  ╚══╝╚══╝  ╚═════╝╚═╝  ╚═╝╚══════╝╚══════╝ */
 #showcase-section {
   padding-top: 4rem;
   padding-bottom: 2rem;
@@ -762,7 +787,12 @@ body {
     /* margin-top: 4rem; */
   }
 }
-
+@media (min-width: 768px) and (min-width: 1400px) {
+  #showcase-section .images {
+    /* margin-top: 2.5rem;
+    margin-bottom: 2.5rem; */
+  }
+}
 #showcase-section .images .img-back {
   position: absolute;
   /* z-index: -10; */
@@ -791,6 +821,13 @@ body {
   }
 }
 
+/* 
+██████╗ ██████╗  █████╗ ███╗   ██╗██████╗ ███████╗
+██╔══██╗██╔══██╗██╔══██╗████╗  ██║██╔══██╗██╔════╝
+██████╔╝██████╔╝███████║██╔██╗ ██║██║  ██║███████╗
+██╔══██╗██╔══██╗██╔══██║██║╚██╗██║██║  ██║╚════██║
+██████╔╝██║  ██║██║  ██║██║ ╚████║██████╔╝███████║
+╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝ ╚══════╝ */
 #brands-section {
   display: none;
 }
@@ -956,6 +993,13 @@ body {
 /* body.dark-mode .af-text-box .features .af-img-container::before {
     background: rgba(243, 246, 255, 0.05); 
 } */
+/* 
+ ██████╗ █████╗ ██████╗  ██████╗ ██╗   ██╗███████╗███████╗██╗     
+██╔════╝██╔══██╗██╔══██╗██╔═══██╗██║   ██║██╔════╝██╔════╝██║     
+██║     ███████║██████╔╝██║   ██║██║   ██║███████╗█████╗  ██║     
+██║     ██╔══██║██╔══██╗██║   ██║██║   ██║╚════██║██╔══╝  ██║     
+╚██████╗██║  ██║██║  ██║╚██████╔╝╚██████╔╝███████║███████╗███████╗
+ ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝  ╚═════╝ ╚══════╝╚══════╝╚══════╝ */
 body {
   overflow-x: hidden;
 }
@@ -1133,6 +1177,20 @@ body {
   }
 }
 
+/* 
+█████╗ ██████╗ ██████╗       ███████╗███████╗ █████╗ ████████╗██╗   ██╗██████╗ ███████╗███████╗
+██╔══██╗██╔══██╗██╔══██╗      ██╔════╝██╔════╝██╔══██╗╚══██╔══╝██║   ██║██╔══██╗██╔════╝██╔════╝
+███████║██████╔╝██████╔╝█████╗█████╗  █████╗  ███████║   ██║   ██║   ██║██████╔╝█████╗  ███████╗
+██╔══██║██╔═══╝ ██╔═══╝ ╚════╝██╔══╝  ██╔══╝  ██╔══██║   ██║   ██║   ██║██╔══██╗██╔══╝  ╚════██║
+██║  ██║██║     ██║           ██║     ███████╗██║  ██║   ██║   ╚██████╔╝██║  ██║███████╗███████║
+╚═╝  ╚═╝╚═╝     ╚═╝           ╚═╝     ╚══════╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝
+
+            ███████╗ ██████╗ ██╗     ██╗      ██████╗ ██╗    ██╗    ██╗   ██╗██████╗            
+            ██╔════╝██╔═══██╗██║     ██║     ██╔═══██╗██║    ██║    ██║   ██║██╔══██╗           
+            █████╗  ██║   ██║██║     ██║     ██║   ██║██║ █╗ ██║    ██║   ██║██████╔╝           
+            ██╔══╝  ██║   ██║██║     ██║     ██║   ██║██║███╗██║    ██║   ██║██╔═══╝            
+            ██║     ╚██████╔╝███████╗███████╗╚██████╔╝╚███╔███╔╝    ╚██████╔╝██║                
+            ╚═╝      ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚══╝╚══╝      ╚═════╝ ╚═╝  */
 #app-features-followup-section {
   display: none;
   padding-bottom: 5rem;
@@ -1267,6 +1325,13 @@ body {
   transform: translateY(-340px);
 }
 
+/* 
+██████╗ ███████╗██╗   ██╗██╗███████╗██╗    ██╗███████╗
+██╔══██╗██╔════╝██║   ██║██║██╔════╝██║    ██║██╔════╝
+██████╔╝█████╗  ██║   ██║██║█████╗  ██║ █╗ ██║███████╗
+██╔══██╗██╔══╝  ╚██╗ ██╔╝██║██╔══╝  ██║███╗██║╚════██║
+██║  ██║███████╗ ╚████╔╝ ██║███████╗╚███╔███╔╝███████║
+╚═╝  ╚═╝╚══════╝  ╚═══╝  ╚═╝╚══════╝ ╚══╝╚══╝ ╚══════╝ */
 #testimonial-section {
   display: none;
 }
@@ -1330,9 +1395,24 @@ body {
   font-size: 0.9rem;
 }
 
+/* 
+███████╗ █████╗  ██████╗                     
+██╔════╝██╔══██╗██╔═══██╗                    
+█████╗  ███████║██║   ██║                    
+██╔══╝  ██╔══██║██║▄▄ ██║                    
+██║     ██║  ██║╚██████╔╝                    
+╚═╝     ╚═╝  ╚═╝ ╚══▀▀═╝                     
+ */
 #faq-section {
   padding-bottom: 0;
   /* ChatGPT code */
+  /*                                              
+   ██████╗ ██████╗ ███╗   ██╗████████╗ █████╗  ██████╗████████╗
+  ██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝██╔══██╗██╔════╝╚══██╔══╝
+  ██║     ██║   ██║██╔██╗ ██║   ██║   ███████║██║        ██║   
+  ██║     ██║   ██║██║╚██╗██║   ██║   ██╔══██║██║        ██║   
+  ╚██████╗╚██████╔╝██║ ╚████║   ██║   ██║  ██║╚██████╗   ██║   
+   ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝   ╚═╝ */
 }
 @media (min-width: 1400px) {
   #faq-section {
@@ -1505,6 +1585,13 @@ body {
   }
 }
 
+/* 
+███████╗██╗   ██╗██████╗ ███████╗ ██████╗██████╗ ██╗██████╗ ███████╗
+██╔════╝██║   ██║██╔══██╗██╔════╝██╔════╝██╔══██╗██║██╔══██╗██╔════╝
+███████╗██║   ██║██████╔╝███████╗██║     ██████╔╝██║██████╔╝█████╗  
+╚════██║██║   ██║██╔══██╗╚════██║██║     ██╔══██╗██║██╔══██╗██╔══╝  
+███████║╚██████╔╝██████╔╝███████║╚██████╗██║  ██║██║██████╔╝███████╗
+╚══════╝ ╚═════╝ ╚═════╝ ╚══════╝ ╚═════╝╚═╝  ╚═╝╚═╝╚═════╝ ╚══════╝ */
 @media (min-width: 1400px) {
   #subscribe-section .center {
     display: grid;
@@ -1627,6 +1714,13 @@ body {
   padding: 1.3em 2.5em;
 }
 
+/* 
+███████╗ ██████╗  ██████╗ ████████╗███████╗██████╗ 
+██╔════╝██╔═══██╗██╔═══██╗╚══██╔══╝██╔════╝██╔══██╗
+█████╗  ██║   ██║██║   ██║   ██║   █████╗  ██████╔╝
+██╔══╝  ██║   ██║██║   ██║   ██║   ██╔══╝  ██╔══██╗
+██║     ╚██████╔╝╚██████╔╝   ██║   ███████╗██║  ██║
+╚═╝      ╚═════╝  ╚═════╝    ╚═╝   ╚══════╝╚═╝  ╚═╝ */
 footer {
   grid-area: footer-section;
   font-size: 14px;
