--- a/css/scss/sections/_app-features-followup.scss
+++ b/css/scss/sections/_app-features-followup.scss
@@ -1,3 +1,18 @@
+/* 
+█████╗ ██████╗ ██████╗       ███████╗███████╗ █████╗ ████████╗██╗   ██╗██████╗ ███████╗███████╗
+██╔══██╗██╔══██╗██╔══██╗      ██╔════╝██╔════╝██╔══██╗╚══██╔══╝██║   ██║██╔══██╗██╔════╝██╔════╝
+███████║██████╔╝██████╔╝█████╗█████╗  █████╗  ███████║   ██║   ██║   ██║██████╔╝█████╗  ███████╗
+██╔══██║██╔═══╝ ██╔═══╝ ╚════╝██╔══╝  ██╔══╝  ██╔══██║   ██║   ██║   ██║██╔══██╗██╔══╝  ╚════██║
+██║  ██║██║     ██║           ██║     ███████╗██║  ██║   ██║   ╚██████╔╝██║  ██║███████╗███████║
+╚═╝  ╚═╝╚═╝     ╚═╝           ╚═╝     ╚══════╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝
+                                                                                                
+            ███████╗ ██████╗ ██╗     ██╗      ██████╗ ██╗    ██╗    ██╗   ██╗██████╗            
+            ██╔════╝██╔═══██╗██║     ██║     ██╔═══██╗██║    ██║    ██║   ██║██╔══██╗           
+            █████╗  ██║   ██║██║     ██║     ██║   ██║██║ █╗ ██║    ██║   ██║██████╔╝           
+            ██╔══╝  ██║   ██║██║     ██║     ██║   ██║██║███╗██║    ██║   ██║██╔═══╝            
+            ██║     ╚██████╔╝███████╗███████╗╚██████╔╝╚███╔███╔╝    ╚██████╔╝██║                
+            ╚═╝      ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚══╝╚══╝      ╚═════╝ ╚═╝  */
+
 #app-features-followup-section {
     display: none;
     padding-bottom: 5rem;
