--- a/css/scss/sections/_showcase.scss
+++ b/css/scss/sections/_showcase.scss
@@ -1,3 +1,11 @@
+/* 
+███████╗██╗  ██╗ ██████╗ ██╗    ██╗ ██████╗ █████╗ ███████╗███████╗
+██╔════╝██║  ██║██╔═══██╗██║    ██║██╔════╝██╔══██╗██╔════╝██╔════╝
+███████╗███████║██║   ██║██║ █╗ ██║██║     ███████║███████╗█████╗  
+╚════██║██╔══██║██║   ██║██║███╗██║██║     ██╔══██║╚════██║██╔══╝  
+███████║██║  ██║╚██████╔╝╚███╔███╔╝╚██████╗██║  ██║███████║███████╗
+╚══════╝╚═╝  ╚═╝ ╚═════╝  ╚══╝╚══╝  ╚═════╝╚═╝  ╚═╝╚══════╝╚══════╝ */
+
 #showcase-section {    
 
     padding-top: 4rem;
