--- a/css/scss/sections/_brands.scss
+++ b/css/scss/sections/_brands.scss
@@ -1,3 +1,11 @@
+/* 
+██████╗ ██████╗  █████╗ ███╗   ██╗██████╗ ███████╗
+██╔══██╗██╔══██╗██╔══██╗████╗  ██║██╔══██╗██╔════╝
+██████╔╝██████╔╝███████║██╔██╗ ██║██║  ██║███████╗
+██╔══██╗██╔══██╗██╔══██║██║╚██╗██║██║  ██║╚════██║
+██████╔╝██║  ██║██║  ██║██║ ╚████║██████╔╝███████║
+╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝ ╚══════╝ */
+
 #brands-section { display: none; 
     
     .container {
