--- a/css/scss/sections/_carousel.scss
+++ b/css/scss/sections/_carousel.scss
@@ -1,3 +1,11 @@
+/* 
+ ██████╗ █████╗ ██████╗  ██████╗ ██╗   ██╗███████╗███████╗██╗     
+██╔════╝██╔══██╗██╔══██╗██╔═══██╗██║   ██║██╔════╝██╔════╝██║     
+██║     ███████║██████╔╝██║   ██║██║   ██║███████╗█████╗  ██║     
+██║     ██╔══██║██╔══██╗██║   ██║██║   ██║╚════██║██╔══╝  ██║     
+╚██████╗██║  ██║██║  ██║╚██████╔╝╚██████╔╝███████║███████╗███████╗
+ ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝  ╚═════╝ ╚══════╝╚══════╝╚══════╝ */
+
 body {
     overflow-x: hidden;
 }
