--- a/css/scss/sections/_faq.scss
+++ b/css/scss/sections/_faq.scss
@@ -1,4 +1,11 @@
-
+/* 
+███████╗ █████╗  ██████╗                     
+██╔════╝██╔══██╗██╔═══██╗                    
+█████╗  ███████║██║   ██║                    
+██╔══╝  ██╔══██║██║▄▄ ██║                    
+██║     ██║  ██║╚██████╔╝                    
+╚═╝     ╚═╝  ╚═╝ ╚══▀▀═╝                     
+ */
 
 #faq-section{
     padding-bottom: 0;
@@ -123,6 +130,14 @@
         font-size: 14px;
     }
     
+/*                                              
+ ██████╗ ██████╗ ███╗   ██╗████████╗ █████╗  ██████╗████████╗
+██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝██╔══██╗██╔════╝╚══██╔══╝
+██║     ██║   ██║██╔██╗ ██║   ██║   ███████║██║        ██║   
+██║     ██║   ██║██║╚██╗██║   ██║   ██╔══██║██║        ██║   
+╚██████╗╚██████╔╝██║ ╚████║   ██║   ██║  ██║╚██████╗   ██║   
+ ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝   ╚═╝ */
+
     .faq-m-contact {
         padding: 3rem;
         padding-top: 4rem;
