--- a/css/scss/sections/_testimonials.scss
+++ b/css/scss/sections/_testimonials.scss
@@ -1,3 +1,11 @@
+/* 
+██████╗ ███████╗██╗   ██╗██╗███████╗██╗    ██╗███████╗
+██╔══██╗██╔════╝██║   ██║██║██╔════╝██║    ██║██╔════╝
+██████╔╝█████╗  ██║   ██║██║█████╗  ██║ █╗ ██║███████╗
+██╔══██╗██╔══╝  ╚██╗ ██╔╝██║██╔══╝  ██║███╗██║╚════██║
+██║  ██║███████╗ ╚████╔╝ ██║███████╗╚███╔███╔╝███████║
+╚═╝  ╚═╝╚══════╝  ╚═══╝  ╚═╝╚══════╝ ╚══╝╚══╝ ╚══════╝ */
+
 #testimonial-section {
     display: none;
 
