--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,82 @@
   --transition-duration: 0.3s; /* Smooth transition duration */
 }
 
+/* Pick your poison. */
+.old-code {
+  display: none;
+}
+
+.new-code {
+  display: block;
+}
+
+* {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+body, section, div, header, footer, main, aside, nav, blockquote, p, span {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+  grid-template-areas: "showcase-section" "brands-section" "app-features-section" "carousel-section" "footer-section";
+}
+
+.bg-gradient {
+  /* For browsers that doesn't support gradient. . . . . . . . . . . . . IE? */
+  background: rgb(99, 102, 241);
+  /* Gradient background */ /* Got some help from ChatGPT here, or rather mostly with changing the colours in the root section. */
+  background: var(--linear-gradient-sc-sec);
+}
+
+.container {
+  width: 100%;
+  padding-left: var(--container-padding);
+  padding-right: var(--container-padding);
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 768px) and (min-width: 1400px) {
+  .container {
+    max-width: 1360px;
+  }
+}
+
+#line {
+  display: none;
+}
+@media (min-width: 768px) {
+  #line {
+    display: block;
+  }
+}
+
+/* (ChatGPT) */
+.full-width-line {
+  width: 100%;
+  border: none; /* Remove default styling */
+  border-top: 2px solid var(--color-almostblack-blue); /* Define the line */
+  margin: 0; /* Adjust margins as needed */
+}
+
 .manrope-Regular {
   font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
@@ -236,185 +312,6 @@ body.dark-mode .btn-circle::before {
     /* gap: 1px; */
     /* padding: 12px 20px; */
   }
-}
-
-/* Pick your poison. */
-.old-code {
-  display: none;
-}
-
-.new-code {
-  display: block;
-}
-
-* {
-  box-sizing: border-box;
-  /* -webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
-}
-
-body, section, div, header, footer, main, aside, nav, blockquote, p, span {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  /* font-family: "Manrope", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal; */
-  font-size: 18px;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  height: 100vh;
-  grid-template-areas: "showcase-section" "brands-section" "app-features-section" "carousel-section" "footer-section";
-}
-
-.bg-gradient {
-  /* For browsers that doesn't support gradient. . . . . . . . . . . . . IE? */
-  background: rgb(99, 102, 241);
-  /* Gradient background */ /* Got some help from ChatGPT here, or rather mostly with changing the colours in the root section. */
-  background: var(--linear-gradient-sc-sec);
-}
-
-.container {
-  width: 100%;
-  padding-left: var(--container-padding);
-  padding-right: var(--container-padding);
-  margin-left: auto;
-  margin-right: auto;
-}
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-@media (min-width: 768px) and (min-width: 1400px) {
-  .container {
-    max-width: 1360px;
-  }
-}
-
-#line {
-  display: none;
-}
-@media (min-width: 768px) {
-  #line {
-    display: block;
-  }
-}
-
-/* (ChatGPT) */
-.full-width-line {
-  width: 100%;
-  border: none; /* Remove default styling */
-  border-top: 2px solid var(--color-almostblack-blue); /* Define the line */
-  margin: 0; /* Adjust margins as needed */
-}
-
-/* 
-██████╗  █████╗ ██████╗ ██╗  ██╗     ███╗   ███╗ ██████╗ ██████╗ ███████╗
-██╔══██╗██╔══██╗██╔══██╗██║ ██╔╝     ████╗ ████║██╔═══██╗██╔══██╗██╔════╝
-██║  ██║███████║██████╔╝█████╔╝█████╗██╔████╔██║██║   ██║██║  ██║█████╗  
-██║  ██║██╔══██║██╔══██╗██╔═██╗╚════╝██║╚██╔╝██║██║   ██║██║  ██║██╔══╝  
-██████╔╝██║  ██║██║  ██║██║  ██╗     ██║ ╚═╝ ██║╚██████╔╝██████╔╝███████╗
-╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝     ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚══════╝ */
-.dark-mode {
-  background-color: var(--color-gray-900);
-  color: var(--color-white);
-}
-.dark-mode p {
-  color: var(--color-tex-wh-o70);
-}
-.dark-mode .sticky-header {
-  background: transparent;
-}
-.dark-mode .sticky-header.scrolled {
-  background: var(--color-gray-900);
-}
-.dark-mode header .nav-link {
-  color: var(--color-gray-500);
-}
-.dark-mode header .nav-link:hover {
-  color: var(--color-primary);
-}
-.dark-mode header .btn-toggle-switch .label {
-  color: var(--color-gray-700);
-}
-.dark-mode header .btn-mobile {
-  color: var(--color-white);
-}
-.dark-mode #showcase-section #sc-text {
-  color: var(--color-tex-wh-o70);
-}
-.dark-mode #showcase-section .btn-download-app {
-  background-color: var(--color-gray-200);
-}
-.dark-mode #showcase-section .btn-download-app:hover {
-  background-color: var(--color-gray-500);
-}
-.dark-mode #showcase-section .btn-circle:hover {
-  background-color: var(--color-gray-700);
-}
-.dark-mode #showcase-section .discover-more span {
-  color: var(--color-tex-wh-o70);
-  /* color: rgba(255, 255, 255, 0.5); */
-}
-.dark-mode .brand-box {
-  background: var(--color-almostblack-blue);
-}
-.dark-mode #app-features-section .af-img-container::before {
-  background-color: rgba(243, 246, 255, 0.05);
-}
-.dark-mode #carousel-section {
-  background-color: var(--color-gray-100-dark);
-}
-.dark-mode #app-features-followup-section .sf2-img-container::before {
-  background-color: rgba(243, 246, 255, 0.05);
-}
-.dark-mode #testimonial-section {
-  background-color: var(--color-gray-100-dark);
-}
-.dark-mode #testimonial-section .review-box {
-  background-color: var(--color-white-dark);
-}
-.dark-mode #faq-section .a1, .dark-mode #faq-section .a2, .dark-mode #faq-section .a3, .dark-mode #faq-section .a4, .dark-mode #faq-section .a5, .dark-mode #faq-section .a6 {
-  color: var(--color-white);
-}
-@media (width < 768px) {
-  .dark-mode #faq-section .faq-accordion-box {
-    border: 0.5px solid var(--color-gray-200-op);
-  }
-}
-.dark-mode #faq-section .faq-accordion-box .box-box:active {
-  border: 1px solid var(--color-gray-200-op);
-}
-.dark-mode #faq-section .faq-accordion {
-  background-color: var(--color-gray-100-dark);
-}
-@media (width < 768px) {
-  .dark-mode #faq-section .faq-accordion {
-    background-color: var(--color-almostblack-blue);
-    border: 0.5px solid var(--color-gray-200-op);
-  }
-}
-.dark-mode #faq-section .faq-accordion + .faq-panel {
-  background-color: var(--color-gray-100-dark);
-}
-@media (width < 768px) {
-  .dark-mode #faq-section .faq-accordion + .faq-panel {
-    background-color: var(--color-almostblack-blue);
-    /* border: 0.5px solid var(--color-gray-200-op); */
-  }
-}
-.dark-mode #faq-section .faq-accordion .icon-down {
-  background-color: hsla(223, 26%, 14%, 0.911);
-  color: var(--color-white);
-}
-.dark-mode #subscribe-section .sub-box {
-  background-color: var(--color-gray-100-dark);
 }
 
 /* 
@@ -1729,4 +1626,107 @@ footer .container {
 }
 footer .credit {
   display: block;
+}
+
+/* 
+██████╗  █████╗ ██████╗ ██╗  ██╗     ███╗   ███╗ ██████╗ ██████╗ ███████╗
+██╔══██╗██╔══██╗██╔══██╗██║ ██╔╝     ████╗ ████║██╔═══██╗██╔══██╗██╔════╝
+██║  ██║███████║██████╔╝█████╔╝█████╗██╔████╔██║██║   ██║██║  ██║█████╗  
+██║  ██║██╔══██║██╔══██╗██╔═██╗╚════╝██║╚██╔╝██║██║   ██║██║  ██║██╔══╝  
+██████╔╝██║  ██║██║  ██║██║  ██╗     ██║ ╚═╝ ██║╚██████╔╝██████╔╝███████╗
+╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝     ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚══════╝ */
+.dark-mode {
+  background-color: var(--color-gray-900);
+  color: var(--color-white);
+}
+.dark-mode p {
+  color: var(--color-tex-wh-o70);
+}
+.dark-mode .sticky-header {
+  background: transparent;
+}
+.dark-mode .sticky-header.scrolled {
+  background: var(--color-gray-900);
+}
+.dark-mode header .nav-link {
+  color: var(--color-gray-500);
+}
+.dark-mode header .nav-link:hover {
+  color: var(--color-primary);
+}
+.dark-mode header .btn-toggle-switch .label {
+  color: var(--color-gray-700);
+}
+.dark-mode header .btn-mobile {
+  color: var(--color-white);
+}
+.dark-mode #showcase-section #sc-text {
+  color: var(--color-tex-wh-o70);
+}
+.dark-mode #showcase-section .btn-download-app {
+  background-color: var(--color-gray-200);
+}
+.dark-mode #showcase-section .btn-download-app:hover {
+  background-color: var(--color-gray-500);
+}
+.dark-mode #showcase-section .btn-circle:hover {
+  background-color: var(--color-gray-700);
+}
+.dark-mode #showcase-section .discover-more span {
+  color: var(--color-tex-wh-o70);
+  /* color: rgba(255, 255, 255, 0.5); */
+}
+.dark-mode .brand-box {
+  background: var(--color-almostblack-blue);
+}
+.dark-mode #app-features-section .af-img-container::before {
+  background-color: rgba(243, 246, 255, 0.05);
+}
+.dark-mode #carousel-section {
+  background-color: var(--color-gray-100-dark);
+}
+.dark-mode #app-features-followup-section .sf2-img-container::before {
+  background-color: rgba(243, 246, 255, 0.05);
+}
+.dark-mode #testimonial-section {
+  background-color: var(--color-gray-100-dark);
+}
+.dark-mode #testimonial-section .review-box {
+  background-color: var(--color-white-dark);
+}
+.dark-mode #faq-section .a1, .dark-mode #faq-section .a2, .dark-mode #faq-section .a3, .dark-mode #faq-section .a4, .dark-mode #faq-section .a5, .dark-mode #faq-section .a6 {
+  color: var(--color-white);
+}
+@media (width < 768px) {
+  .dark-mode #faq-section .faq-accordion-box {
+    border: 0.5px solid var(--color-gray-200-op);
+  }
+}
+.dark-mode #faq-section .faq-accordion-box .box-box:active {
+  border: 1px solid var(--color-gray-200-op);
+}
+.dark-mode #faq-section .faq-accordion {
+  background-color: var(--color-gray-100-dark);
+}
+@media (width < 768px) {
+  .dark-mode #faq-section .faq-accordion {
+    background-color: var(--color-almostblack-blue);
+    border: 0.5px solid var(--color-gray-200-op);
+  }
+}
+.dark-mode #faq-section .faq-accordion + .faq-panel {
+  background-color: var(--color-gray-100-dark);
+}
+@media (width < 768px) {
+  .dark-mode #faq-section .faq-accordion + .faq-panel {
+    background-color: var(--color-almostblack-blue);
+    /* border: 0.5px solid var(--color-gray-200-op); */
+  }
+}
+.dark-mode #faq-section .faq-accordion .icon-down {
+  background-color: hsla(223, 26%, 14%, 0.911);
+  color: var(--color-white);
+}
+.dark-mode #subscribe-section .sub-box {
+  background-color: var(--color-gray-100-dark);
 }/*# sourceMappingURL=main.css.map */
